# Cappie

./: Cargo.toml  LICENSE  README.md
example/: basic.rs  custom.rs  flexible.rs  pretty.rs
src/: formatter.rs  level.rs  lib.rs  logger.rs  output.rs
