[package]
name = "cappie"
version = "0.1.0"
edition = "2021"
description = "A fast JSON logger for Rust."
license = "MIT"
authors = ["DitzDev<ditz@ditz.my.id>"]
repository = "https://github.com/DitzDev/Cappie"
homepage = "https://github.com/DitzDev/Cappie"
readme = "README.md"
keywords = ["logger", "interactive", "json"]
categories = ["logger::json"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "basic"
path = "example/basic.rs"

[[example]]
name = "pretty"
path = "example/pretty.rs"

[[example]]
name = "custom"
path = "example/custom.rs"